--- a/_includes/comment_form.html
+++ b/_includes/comment_form.html
@@ -1,4 +1,4 @@
-#from @avglinux
+<!-- From @avglinux -->
 <form class="js-form form" method="post" action="{{ site.staticman_url }}">
   <input type="hidden" name="options[origin]" value="{{ page.url | absolute_url }}">
   <input type="hidden" name="options[parent]" value="{{ page.url | absolute_url }}">
