--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,4 @@
-# from @avglinux
+<!-- From @avglinux -->
 
 <section class="comments" id="comment-section">
   {% if site.data.comments[page.slug] %}
