--- a/_includes/comment_form.html
+++ b/_includes/comment_form.html
@@ -1,4 +1,4 @@
-<!-- From @avglinux -->
+<!-- Edited from @avglinux -->
 <form class="js-form form" method="post" action="{{ site.staticman_url }}">
   <input type="hidden" name="options[origin]" value="{{ page.url | absolute_url }}">
   <input type="hidden" name="options[parent]" value="{{ page.url | absolute_url }}">
@@ -11,9 +11,6 @@
     <label for="comment-form-message"><h2>Add Comment <small><a rel="nofollow" id="cancel-comment-reply-link" href="{{ page.url | absolute_url }}#respond" style="display:none;">(cancel reply)</a></small></h2>
       <textarea class="textfield__input" name="fields[message]" type="text" id="comment-form-message" placeholder="Your comment (markdown accepted)" required rows="6"></textarea>
     </label>
-    <div class="comment-form-message-footnote">
-      Learn how to write in Markdown with this <a rel="nofollow" target="_blank" href="https://kramdown.gettalong.org/quickref.html">Quick Reference</a>.
-    </div>
   </div>
 
     <div class="textfield narrowfield">
@@ -38,13 +35,8 @@
         <input class="textfield__input" name="fields[hp]" id="hp" type="text" placeholder="Leave blank">
       </label>
     </div>
-    
-    <div id="reCaptcha" class="g-recaptcha" data-sitekey="{{ site.reCaptcha.siteKey }}"></div>
-
+  
     <button class="button" id="comment-form-submit">Submit</button>
-
-    <div class="comment-form-footnote">
-      * E-mail is used to display <a rel="nofollow" target="_blank" href="https://gravatar.com/">Gravatar</a>.
     </div>
 </form>
 
