--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,4 @@
-<!-- From @avglinux -->
+<!-- From https://github.com/avglinux/alu-test-website/blob/master/_includes/comments.html -->
 
 <section class="comments" id="comment-section">
   {% if site.data.comments[page.slug] %}
