--- a/_includes/comment_form.html
+++ b/_includes/comment_form.html
@@ -1,4 +1,4 @@
-<!-- Edited from @avglinux -->
+<!-- Modified from https://github.com/avglinux/alu-test-website/blob/master/_includes/comment_form.html -->
 <form class="js-form form" method="post" action="{{ site.staticman_url }}">
   <input type="hidden" name="options[origin]" value="{{ page.url | absolute_url }}">
   <input type="hidden" name="options[parent]" value="{{ page.url | absolute_url }}">
