--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,4 @@
-<!-- From @avglinux -->
+<!-- From https://github.com/avglinux/alu-test-website/blob/master/_layouts/post.html -->
 <!-- Begin Comments -->
 {% if page.comments != false %}
   <div id="comments">
