--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,4 @@
-<!-- From https://github.com/avglinux/alu-test-website/blob/master/_includes/comments.html -->
+<!-- Modified from https://github.com/avglinux/alu-test-website/blob/master/_includes/comments.html -->
 
 <section class="comments" id="comment-section">
   {% if site.data.comments[page.slug] %}
@@ -10,7 +10,6 @@
     {% assign comments_by_date = comments | sort: 'date' | reverse %}
     <!-- List main comments in reverse date order, newest first. List replies in date order, oldest first. -->
     {% for comment in comments_by_date %}
-    {%- assign email           = comment.email %}
     {%- assign name            = comment.name %}
     {%- assign url             = comment.url %}
     {%- assign date            = comment.date %}
@@ -29,4 +28,3 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="{{ '/assets/js/staticman.js' | relative_url }}"></script>
-<script src="https://www.google.com/recaptcha/api.js"></script>
